# chesslab

./: .gitignore  pyproject.toml
examples/: convertor.ipynb
examples/preprocess/: Preprocess-full.ipynb
examples/test/: AgentTestMcts.ipynb  AgentTestTensorflow-full.ipynb  AgentTestTorch-Copy1.ipynb  Kaumfan_test_boards.ipynb
examples/training/: training_tf.ipynb
flask_demo/: mcts_tf_app.py  tf_app.py
src/chesslab/: convertor.py  utils.py
